Fix alignment of the header.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,3 +4,4 @@
 @import "{{ site.theme }}";
 
 header h1:before { content: ""; }
+header h1 { margin: 0; }
